k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chm
  labels:
    app: container-health-monitor
