k8s/10-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: chm
spec:
  clusterIP: None
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chm
spec:
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chm
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    name: http
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: chm
spec:
  selector:
    app: prometheus
  ports:
  - port: 9090
    targetPort: 9090
    name: http
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: chm
spec:
  selector:
    app: grafana
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  type: NodePort
